--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -196,11 +196,11 @@ body{
 }
 
 a{
-  color: #3D6C87;
+  color: #994ff2;
 }
 
 a:hover{
-  text-shadow: 0 0 5px #3f8ad0;
+  text-shadow: 0 0 5px #8334f2;
 }
 
 #count{
@@ -229,11 +229,43 @@ a:hover{
 #indexBeach{
   display: flex;
   z-index: auto;
-  justify-content: space-around;
+  align-items: center;
   margin-top: 40px;
 }
 
+#beachAnchor{
+  margin: 100px;
+  display: flex;
+  justify-content: center;
+  border-radius: 100px;
+  color: #ae43f0;
+}
 
+#beachIntro{
+  margin: 50px;
+  padding: 60px;
+  font-size: 30px;
+  font-family: American Typewriter, serif;
+}
+
+#oceanPic{
+  height: 280px;
+  width: 280px;
+  z-index: -1;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  color: rgb(222, 101, 101);
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 /*
 start of animation
@@ -254,7 +286,6 @@ body{
   width: 100%;
   position: absolute;
   top:50vh;
-  
 }
 
 .context h1{
@@ -268,7 +299,7 @@ body{
   background: #646ae0;  
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
   width: 100%;
-  height:100vh;
+  height:150vh;
 }
 
 .circles{
@@ -276,7 +307,7 @@ body{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 150vh;
   overflow: hidden;
   z-index: -1;
 }
@@ -290,7 +321,6 @@ body{
   background: rgba(255, 255, 255, 0.2);
   animation: animate 25s linear infinite;
   bottom: -150px;
-  
 }
 
 .circles li:nth-child(1){
