--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body id="homeIndex" class="area">
   <h1 id="indexBar"> 
-    Off the Map
+    Off//The//Map
   </h1>
   
   
@@ -34,7 +34,41 @@
         In this section the adventurer will find out about locations that revolve around the water. 
         While the most desired might be beaches hidden from the public, a place where you can be by the ocean and 
         yet away from all the people. Or perhaps there is a ropeswing tied to an old sycamore tree that's 
-        jsut around the river bend
+        just around the river bend. 
+    </p>
+  </div>
+
+  <div id="indexBeach">
+    
+    <p id="beachIntro">
+      This section will include locations that focus more on being in or around the forest and mountains. Areas that 
+      more often then not require a hike of some kind to get to them. These areas are more about the views or the 
+      trail itself for people who need to get out of the city and into the fresh air. 
+    </p>
+    <div class="container">
+      <a href="/beach" style="float:left" id="beachAnchor" >
+        <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/3061/3061240.png" alt="Learn More">
+        <div class="centered">
+          See Locations !
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div id="indexBeach">
+    <div class="container">
+      <a href="/beach" style="float:left" id="beachAnchor" >
+        <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/4284/4284890.png" alt="Learn More">
+        <div class="centered">
+          See Locations !
+        </div>
+      </a>
+    </div>
+      
+    <p id="beachIntro">
+      The final section will be exploring a different kind of area all together, that which is man made.
+      The urban explorers guide to all things abandonded and forgoten. This is inclusive of all abandonded stuctures in and around the city; 
+      bridges and airplane grave yards, from old factories to empty theme parks and all that falls bewteen. For those who are even more daring this is not limited to locations above the ground, but also below it.. 
     </p>
   </div>
     
