--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,29 @@
   <link rel="stylesheet" href="">
   <title><%= title %></title>
 </head>
-<body id="homeIndex" class="area">
-  <h1 id="indexBar"> 
-    Off//The//Map
-  </h1>
+<body id="homeIndex" class="area" >
+
+  <div class="indexBar">
+    <h1 class="header"> 
+      Off//The//Map
+    </h1>
+
+    <div id="iconPosition">
+      <a href="/">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/1946/1946436.png" alt="">
+      </a>
+      <a href="/beach">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
+      </a>
+      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/1551/1551074.png" alt="">
+      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+    </div>
+
+  </div>
   
   
   <p id="indexP"> Here at Off the Map we share destinations that are quit simply off trial. Places that require ingenuity and 
-    a sense of adventure to get to. Some aresas you may have to hike, climb or swim to get to them. These can be locations
+    a sense of adventure to get to. Some areas you may have to hike, climb or swim to get to them. These can be locations
     in the city, the mountains, maybe even beaches that you have to kayak to. There are still explorers out there, 
     and here they can share some of their discoveries with those looking for an off road adventure. 
   </p>
@@ -30,7 +45,7 @@
       </a>
     </div>
       
-    <p id="beachIntro">
+    <p id="sectionIntro">
         In this section the adventurer will find out about locations that revolve around the water. 
         While the most desired might be beaches hidden from the public, a place where you can be by the ocean and 
         yet away from all the people. Or perhaps there is a ropeswing tied to an old sycamore tree that's 
@@ -40,9 +55,8 @@
 
   <div id="indexBeach">
     
-    <p id="beachIntro">
-      This section will include locations that focus more on being in or around the forest and mountains. Areas that 
-      more often then not require a hike of some kind to get to them. These areas are more about the views or the 
+    <p id="sectionIntro">
+      Have you been needing to get out onto the trail?? These locations focus more on being in or around the forest and mountains. Areas that more often then not require a hike of some kind to get to them. These areas are more about the views or the 
       trail itself for people who need to get out of the city and into the fresh air. 
     </p>
     <div class="container">
@@ -65,17 +79,20 @@
       </a>
     </div>
       
-    <p id="beachIntro">
+    <p id="sectionIntro">
       The final section will be exploring a different kind of area all together, that which is man made.
-      The urban explorers guide to all things abandonded and forgoten. This is inclusive of all abandonded stuctures in and around the city; 
+      The urban explorers guide to all things abandonded and forgoten. This is inclusive of all stuctures in and around the city; 
       bridges and airplane grave yards, from old factories to empty theme parks and all that falls bewteen. For those who are even more daring this is not limited to locations above the ground, but also below it.. 
     </p>
   </div>
-    
-      <div id="">
-        <a href="/todos">Todos</a>
-      </div>
 
+  <div>
+    <p>
+      **Disclaimer. We do not condone or promote trespassing or breaking and entering of any kind. Nor do we support
+      vandilism or destruction of any kind of property**
+    </p>
+  </div>
+    
 <br>
   <ul class="circles">
     <li></li>
