--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,16 +29,13 @@
   </div>
   
   
-  <p id="indexP"> Here at Off the Map we share destinations that are quit simply off trial. Places that require ingenuity and 
-    a sense of adventure to get to. Some areas you may have to hike, climb or swim to get to them. These can be locations
-    in the city, the mountains, maybe even beaches that you have to kayak to. There are still explorers out there, 
-    and here they can share some of their discoveries with those looking for an off road adventure. 
+  <p id="indexP"> There are still explorers out there charting new lands and here they can share some of their discoveries with those looking for an Off the Map adventure. Here we can share destinations that are quit simply off trial. Places that require ingenuity and a sense of adventure to get to. It might be in a different country, your back yard, under a mountian but it's somehwere that's worth sharing wirh the world. Some areas you may have to hike, climb or swim to get to them but like all adventures you have to be the one reach it.
   </p>
   
   <div id="indexBeach">
     <div class="container">
       <a href="/beach" style="float:left" id="beachAnchor" >
-        <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/4357/4357730.png" alt="Learn More">
+        <img src="https://cdn-icons-png.flaticon.com/512/4357/4357730.png" alt="" id="oceanPic">
         <div class="centered">
           See Locations !
         </div>
@@ -47,7 +44,7 @@
       
     <p id="sectionIntro">
         In this section the adventurer will find out about locations that revolve around the water. 
-        While the most desired might be beaches hidden from the public, a place where you can be by the ocean and 
+        While most might be beaches hidden from the public, places where you can be by the ocean and 
         yet away from all the people. Or perhaps there is a ropeswing tied to an old sycamore tree that's 
         just around the river bend. 
     </p>
@@ -61,7 +58,7 @@
     </p>
     <div class="container">
       <a href="/beach" style="float:left" id="beachAnchor" >
-        <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/3061/3061240.png" alt="Learn More">
+        <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/3175/3175239.png" alt="Learn More">
         <div class="centered">
           See Locations !
         </div>
