--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,8 +44,8 @@
       
     <p id="sectionIntro">
         In this section the adventurer will find out about locations that revolve around the water. 
-        While most might be beaches hidden from the public, places where you can be by the ocean and 
-        yet away from all the people. Or perhaps there is a ropeswing tied to an old sycamore tree that's 
+        While these might be beaches hidden from the public, places where you can be by the ocean and 
+        yet away from all the people. Or perhaps there is a rope swing tied to an old sycamore tree that's 
         just around the river bend. 
     </p>
   </div>
