--- a/views/beach/edit.ejs
+++ b/views/beach/edit.ejs
@@ -21,37 +21,51 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
+      </a>
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      </a>
     </div>
   </div>
 
-
-  <div id=""">
-    <form action="/beach/<%= beach._id%>?_method=PUT" method="post">
-      <label for="title">Title:
-        <input type="text" name="title" required placeholder="Title" id="todoTitle" value="<%=beach.title%>">  
+  <div id="newBeach">
+    <p id="aboutSection">
+      Is something out of place or needs some fine tuning? Here is where you can make adjustments to a location as needed. All feilds are able to be updated and changed. Please only adjsut if necessary
+    </p>
+    <form action="/beach/<%= beach._id %>?_method=PUT" method="post" id="beachForm">
+      <label for="title"> Adjust location Name:
+        <input type="text" name="title" required value="<%= beach.title %> " id="todoTitle">  
       </label>
         <br>
       <label for="level"> Difficulty:
-        <input type="text" value="<%= beach.level %> ">
+        <input type="text" name="level" value="<%= beach.level %> " >
       </label>
         <br>
-      <label for="gear">Gear:
-        <input type="text" value="<%= beach.gear %> ">
+      <label for="gear">What gear is needed?
+        <input type="text" name="gear" value="<%= beach.gear %> ">
       </label>
         <br>
-      <label for="area">Area:
+      <label for="area">Provide a desctiption  of how to get there
         <input type="text" name="area" value="<%= beach.area %> ">
       </label>
-      
+        <br>
       <button type="submit" id="submit">Submit</button>
+        <br>
+    </form>
+
+  </div>
+
+  <div class="deleteArea">
+    <p>Or would you like to delete this area?</p>
+    <form action="/beach/<%= beach._id %>?_method=DELETE" method="post" >
+      <button type="submit" id="deleteButton">  Delete this Area</button>
     </form>
   </div>
 
-
 <div id="homeGroup">
-<a href="/beaches" id="">BACK</a>
+<a href="/beach" id="">BACK</a>
 <a id="" href="/">HOME</a>
 </div>
 
