--- a/views/beach/new.ejs
+++ b/views/beach/new.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Document</title>
 </head>
-<body>
+<body class="area">
   <div id="beachBar">
     <h1 class="header"> 
       Beaches / Water  Locations
@@ -20,8 +20,12 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
+      </a>
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      </a>
     </div>
   </div>
 
@@ -49,7 +53,8 @@
         <button type="submit" id="submit">Submit</button>
     </form>
   </div>
-  <div >
+
+  <div id="homeGroup">
     <a href="/beach">Back to Beaches</a>
     <a href=",">Home</a>
   </div>
