--- a/views/beach/show.ejs
+++ b/views/beach/show.ejs
@@ -21,8 +21,12 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/1551/1551074.png" alt="">
-      <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
+      </a>
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
+      </a>
     </div>
 </div>
 
@@ -41,8 +45,10 @@
     <p >
       <%= beach.area %> 
     </p>
+    
   </div>
 
+  
 
   <div id="homeGroup">
     <a href="/beach/<%= beach.id %>/edit"> Click to Edit</a>
